[package]
name = "ticketland-ws"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.2"
actix-web = "4.0.1"
actix-cors = "0.6.1"
actix-web-actors = "4.1.0"
async-trait = "0.1.56"
borsh = "0.9.3"
eyre = "0.6.8"
ticketland-core = { git = "https://github.com/ticketland-io/common-rust", version = "0.2.13"  }
amqp-helpers = { git = "https://github.com/ticketland-io/amqp-helpers", version = "0.1.7" }
api-helpers = { git = "https://github.com/ticketland-io/common-rust", version = "0.3.10" }
common-data = { git = "https://github.com/ticketland-io/common-rust", version = "0.3.36" }
ticketland-utils = { git = "https://github.com/ticketland-io/common-rust", version = "0.2.3" }
fiat-checkout-manager = { git = "https://github.com/ticketland-io/fiat-checkout-manager", version ="0.1.3" }
env_logger = "0.9.0"
dotenv = "0.15"
uuid = { version = "1.1.2", features = ["v4"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.32"
lapin = "2.1.1"
tracing = "0.1.19"
tracing-subscriber = "0.3.16"
