[package]
name = "checkout-ws"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.2"
actix-web = "4.0.1"
actix-cors = "0.6.1"
actix-web-actors = "4.1.0"
async-trait = "0.1.56"
borsh = "0.9.3"
eyre = "0.6.8"
# ticketland-core = { git = "https://github.com/ticketland-io/common-rust", version = "0.2.19" }
ticketland-core = { path = "../common-rust/src/ticketland-core" }
amqp-helpers = { git = "https://github.com/ticketland-io/amqp-helpers", version = "0.4.3" }
# api-helpers = { git = "https://github.com/ticketland-io/common-rust", version = "0.3.26" }
api-helpers = { path = "../common-rust/src/api-helpers" }
ticketland-utils = { git = "https://github.com/ticketland-io/common-rust", version = "0.2.3" }
# fiat-checkout-manager = { git = "https://github.com/ticketland-io/fiat-checkout-manager", branch="fix/remove-on-behalf-of",  version ="0.1.13" }
fiat-checkout-manager = {path = '../fiat-checkout-manager'}
env_logger = "0.9.0"
dotenv = "0.15"
uuid = { version = "1.1.2", features = ["v4"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.14.1", features = ["rt-multi-thread"]}
thiserror = "1.0.32"
lapin = "2.1.1"
tracing = "0.1.19"
tracing-subscriber = "0.3.16"
